@startuml

class App {
    start()
    main()
}

class SceneManager {
    scenes: Map<String, Scene>

    load()
    getScene(String): Scene;
}

class MainWindowController {
    items: ItemModel
    scenes: SceneManager
    fileManger: FileManger

    + MainWindowController(ItemModel, SceneManager)

    addItemButtonClicked(EventHandler)
    editItemButtonClicked(EventHandler)
    deleteItemButtonClicked(EventHandler)
    newButtonClicked(EventHandler)
    saveAsMenuClicked(EventHandler)
    loadMenuClicked(EventHandler)
    closeMenuClicked(EventHandler)
    aboutMenuClicked(EventHandler)

    handleAddItem()
    handleEditItem()
    handleDeleteItem()
    handleNewButtonClicked()
    handleSaveAs()
    handleLoad()
    handleClose()
    handleAbout()
}

class AddItemWindowController {
    items: ItemModel
    scenes: SceneManager

    cancelClicked(EventHandler)
    okClicked(EventHandler)

    setItem()
    handleOkClicked()
    handleCancelClicked()
    inInputValid()
}

class Item {
    - name: SimpleStringProperty
    - serialNumber: SimpleStringProperty
    - value: SimpleDoubleProperty

    + getName()
    + setName()
    + nameProperty()
    + getSerialNumber()
    '...
}

openjfx.org.Applications <|-- App
App -- SceneManager
SceneManager -- MainWindowController
SceneManager -- AddItemWindowController
MainWindowController o-- ItemModel
AddItemWindowController o-- ItemModel

ItemModel *-- Item

@enduml